[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Bullets/BulletShip.gd" type="Script" id=1]
[ext_resource path="res://assets/space_shooter_pack/Graphics/spritesheets/laser-bolts.png" type="Texture" id=2]
[ext_resource path="res://assets/space_shooter_pack/Graphics/spritesheets/explosion.png" type="Texture" id=3]
[ext_resource path="res://src/Bullets/BulletBase.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "desintegration",
"speed": 20.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "explosion",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 3.0

[node name="ShipBullet" instance=ExtResource( 4 )]
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
frames = SubResource( 6 )
frame = 1

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 7 )

[node name="DesintegrationTimer" type="Timer" parent="." index="3"]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DesintegrationTimer" to="." method="_on_ExplodeTimer_timeout"]
